Fixed overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,18 @@
     font-style: normal;
 }
 
+html
+{
+	height: 100%;
+}
+
 body
 {
 	background-color: #1C1C1C;
+	
+	font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+	color: #ECECEC;
+	height: 100%;
 	
 	margin: 0;
 }
@@ -24,9 +33,11 @@ body
 	border-right: 4px solid #44BBFF;
 	
     width: 640px;
-	height: 100vh;
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
 	
-	margin: 0 auto;
+	margin: 0 auto -1px;
 	
 	overflow: hidden;
 }
@@ -40,21 +51,18 @@ body
 
 #text
 {
-	padding: 8px 32px 32px 32px;
+	padding: 8px 32px 8px 32px;
 }
 
 #text p
 {
-	font-family: Futura, "Trebuchet MS", Arial, sans-serif;
 	font-size: 12pt;
 	text-align: justify;
-	color: #ECECEC;
 }
 
 #text h1
 {
 	position: relative;
-	color: #ECECEC;
 	font-family: '04b03regular', sans-serif;
 }
 
@@ -73,16 +81,24 @@ body
 	color: #2299DD;
 }
 
-hr
+#text hr
 {
 	border: 0;
 	background-color: #44BBFF;
 	height: 2px;
-	float: left;
 	width: 64px;
 	margin-top: -16px;
 }
 
+hr.left
+{
+	float: left;
+}
+
+.footer, .push
+{
+	height: 0.5em;
+}
 
 /*
 #wrapper:before
